--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,7 +1,7 @@
 <import from="./components/component-one"></import>
 <import from="./components/component-two"></import>
 
-<div class="message">${message}</div>
+<div class="my-message">${message}</div>
 
 <component-one></component-one>
 <component-two></component-two>
